--- a/thesis_paper/00_Abstract.tex
+++ b/thesis_paper/00_Abstract.tex
@@ -1,4 +1,4 @@
 \chapter*{Abstract}
 \label{chapter:abstract}
-Geometry streaming of multi-levels of detail has been well studied in recent years. The client progressively and gradually streams refinement details of a geometry model from its server according to user's viewing interaction on the model. And meanwhile, mobile devices (or hand-held devices) are developing fast in recent years and it can be foreseen that in near future in some particular scenarios mobile devices may take the place of tradition desktops. Though there are already several client-server geometry streaming frameworks proposed, none of them implemented client-side application on mobile devices. In this thesis, a view-dependent streaming framework on mobile devices of large-scale geometry models is proposed. In the traditional scenario of online geometry model viewing, client usually downloads the whole model from server. This old approach may result in long downloading time when viewing with large-scale models. While in the steaming framework proposed in this thesis, users are able to use mobile devices to selectively view large-scale models, whose details are progressively transmitted from server and the viewing model is continuously refined and rendered to the screen of client-side mobile devices. Furthermore, for even larger models, our framework also supports server side rendering. In this situation, the viewing model is refined according to the viewing parameter synchronized from client and then rendered on server side into images, which will be later streamed to clients. Experiments show that our approach are able to support smooth and interactive view-dependent streaming of large geometry models with over millions of triangles on an iPad through network. 
+Geometry streaming of multi-levels of detail has been well studied in recent years. The client progressively and gradually streams refinement details of a geometry model from its server according to user's viewing interaction on the model. And meanwhile, mobile devices (or hand-held devices) are developing fast in recent years and it can be foreseen that in near future in some particular scenarios mobile devices may take the place of tradition desktops. Though there are already several client-server geometry streaming frameworks proposed, none of them implemented client-side application on mobile devices. In this thesis, a view-dependent streaming framework on mobile devices of large-scale geometry models is proposed. In the traditional scenario of online geometry model viewing, client usually downloads the whole model from server. This old approach may result in long downloading time when viewing with large-scale models. While in the streaming framework proposed in this thesis, users are able to use mobile devices to selectively view large-scale models, whose details are progressively transmitted from server and the viewing model is continuously refined and rendered to the screen of client-side mobile devices. Furthermore, for even larger models, our framework also supports server side rendering. In this situation, the viewing model is refined according to the viewing parameter synchronized from client and then rendered on server side into images, which will be later streamed to clients. Experiments show that our approach are able to support smooth and interactive view-dependent streaming of large geometry models with over millions of triangles on an iPad through network. 
 
