--- a/thesis_paper/00_Cover.tex
+++ b/thesis_paper/00_Cover.tex
@@ -24,7 +24,7 @@ Department of Computer Science \\[1.5cm]
   Haiyang Xu\\[1.2cm]
   
     \emph{submitted}\\
-    12.05.2013\\[1.2cm]
+    10.06.2013\\[1.2cm]
     
   
   \emph{Supervisor/Advisor} \\
@@ -49,6 +49,7 @@ Department of Computer Science \\[1.5cm]
 \thispagestyle{empty}
 ~
 \vfill
+\newpage
 \begin{flushleft}
 {
         \small
@@ -58,16 +59,20 @@ Department of Computer Science \\[1.5cm]
 anderen als die angegebenen Quellen und Hilfsmittel verwendet habe.\\
 	I hereby confirm that I have written this thesis on my own and that I have not used any other media or
 materials than the ones referred to in this thesis.\\[\baselineskip]
-	Saarbr\"ucken, December 31, 2012\\
+	Saarbr\"ucken, June 10, 2013\\
 \vspace{4cm}
 	\textbf{Einverst\"andniserkl\"arung / Declaration of Consent:}\\
 	Ich bin damit einverstanden, dass meine (bestandene) Arbeit in beiden Versionen in die Bibliothek der
 Informatik aufgenommen und damit ver\"offentlicht wird.\\
 	I agree to make both versions of my thesis (with a passing grade) accessible to the public by having
 them added to the library of the Computer Science Department.\\[\baselineskip]
-	Saarbr\"ucken, December 31, 2012
+	Saarbr\"ucken, June 10, 2013
 \vspace{3cm}
 }
 \end{flushleft}
+\clearpage
+\thispagestyle{empty}
+~
+\vfill
 
 
