--- a/thesis_paper/graphs/GraphClientTSC.tex
+++ b/thesis_paper/graphs/GraphClientTSC.tex
@@ -26,7 +26,7 @@
 \psline[linewidth=0.04,arrowsize=0.05291667cm 2.0,arrowlength=1.4,arrowinset=0.4]{<-}(2.2,1.2060156)(2.2,-0.39398438)(5.8,-0.39398438)
 \psframe[linewidth=0.04,dimen=outer](8.6,-1.5939844)(5.8,-2.1939843)
 \usefont{T1}{ptm}{m}{n}
-\rput(7.183945,-1.8889843){WaitLoadModel}
+\rput(7.183945,-1.8889843){WaitLoadDetails}
 \psline[linewidth=0.04,arrowsize=0.05291667cm 2.0,arrowlength=1.4,arrowinset=0.4]{->}(1.8,1.2060156)(1.8,-1.7939844)(5.8,-1.7939844)
 \usefont{T1}{ptm}{m}{n}
 \rput(4.0924706,-1.4889843){SyncViewingParams}
