--- a/thesis_paper/graphs/GraphServerTSC.tex
+++ b/thesis_paper/graphs/GraphServerTSC.tex
@@ -26,7 +26,7 @@
 \psline[linewidth=0.04,arrowsize=0.05291667cm 2.0,arrowlength=1.4,arrowinset=0.4]{<-}(1.9869922,1.0060157)(1.9869922,-0.59398437)(7.186992,-0.59398437)
 \psframe[linewidth=0.04,dimen=outer](9.986992,-1.7939844)(7.186992,-2.3939843)
 \usefont{T1}{ptm}{m}{n}
-\rput(8.570937,-2.0889845){WaitLoadModel}
+\rput(8.570937,-2.0889845){LoadDetails/Render}
 \psline[linewidth=0.04,arrowsize=0.05291667cm 2.0,arrowlength=1.4,arrowinset=0.4]{->}(0.9869922,1.0060157)(0.9869922,-1.9939843)(7.186992,-1.9939843)
 \usefont{T1}{ptm}{m}{n}
 \rput(4.9076366,-1.6889844){ReceiveViewingParams}
